# dhall-migrations

./: CHANGELOG.md  README.md  cabal.project  dhall-migrations.cabal
app/: Main.hs
config/current/: settings-normalised.dhall  settings.dhall  settings.yaml
config/examples/: example-simple.dhall  example-with-function.dhall  example-with-import.dhall  example-with-override.dhall  example-with-type-function.dhall  example-with-type-mismatch.dhall  example-with-type.dhall  make-config.dhall  settings-v1.dhall  settings-v2.dhall  settings-v3.dhall
config/versions/: v0.0.dhall  v0.1.0.dhall  v1.0.0.dhall  v1.1.0.dhall
config/versions/v0.0/: types.dhall
config/versions/v0.1.0/: migrate.dhall  types.dhall
config/versions/v1.0.0/: migrate.dhall  types.dhall
config/versions/v1.1.0/: migrate.dhall  types.dhall
